http://bugs.dwscoalition.org/show_bug.cgi?id=2524
A bit of whitespace between entry subject and textarea for some breathing room.

Patch by fu.

--- a/htdocs/stc/postform.css
+++ b/htdocs/stc/postform.css
@@ -158,6 +158,9 @@
   box-sizing: border-box;
 }
 
+.event-container {
+  margin-top: 5px;
+}
 .event-container, .subject-container {
   padding: 0 2px;
 }
